@@ -11,7 +11,6 @@ Keys.testOptions in Test += Tests.Argument("-oD")
 Keys.javaOptions in Test ++= Seq(
   "-Xms512M",
   "-Xmx2048M",
-  "-XX:MaxPermSize=2048M",
   "-XX:+CMSClassUnloadingEnabled"
 )
 Keys.parallelExecution in Test := false
